# expenserule

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
expenserule/: __init__.py  categories.py  categorization.py  cli.py  database.py  llm.py  main.py
expenserule/routers/: expenses.py  setup.py  upload.py
expenserule/static/css/: app.css
expenserule/templates/: base.html  index.html  new.html  setup.html  upload.html
expenserule/templates/partials/: expense_table.html
