[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expenserule"
version = "0.1.0"
description = "Automated receipt categorization for freelancers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "pillow>=10.3.0",
    "openai>=1.25.0",
    "aiofiles>=23.2.1",
    "pdf2image>=1.17.0",
]

[project.scripts]
expenserule = "expenserule.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["expenserule"]
